# openclaw-crm

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/openclaw_crm/backends/: __init__.py  gspread_backend.py
